# tsearch

./: .gitignore  .prettierignore  .prettierrc  LICENSE  api.yml  flake.nix  functions.json  go.mod  index.ts  notes.md  package.json  readme.md  roadmap.md  shell.nix  simple.ts  tsconfig.json
.github/workflows/: server-build.yml
api-lib/: default.nix  tsearch-api-lib.cabal
api-lib/Tsearch/API/: Api.hs  Request.hs  Response.hs
api-lib/Tsearch/API/Response/: Search.hs
api-lib/Tsearch/API/Schemas/: Function.hs  FunctionOrType.hs  SearchError.hs  SearchResult.hs  Type.hs
app/: package.json  tsconfig.json  tslint.json
app/public/: index.html
app/src/components/: SearchResult.tsx
cli/: package.json
cli/.ts-search/: functions.json
cli/test/: index.ts
client/: README.md  next-sitemap.js  now.json  package.json  readme.md
client/public/: index.html  manifest.json
client/src/: index.tsx  types.ts
example/: index.ts  utils.ts
indexer/: 2020-06-13-09-18-01.json  index-go.json  index-parallel.json  index.json  main.go  package.json  readme.md  tsconfig.json
indexer/src/: cli.ts  index.ts  types.ts
nix/: haskell.nix  override-ghc.nix  tie.nix  tsearch-api-lib.nix
old-client/: .prettierrc  LICENSE  package.json
old-client/src/: types.ts
scripts/: build-api-lib.sh
server/: .gitignore  .travis.yml  Dockerfile  Makefile  default.nix  docker-compose.yml  modules.json  now.json  package.json  package.yaml  readme.md  server.cabal  stack.yaml
server/src/: Toolbelt.hs  Tsearch.hs
src/: cli.ts  extract.ts
test/: index.ts
(+37 files in other folders)
